# open-eth

./: .gitignore  README.md  demo.html  dex.css  dex.js  docker-compose.yml  example1a.json  index.html  make-backup  nginx-init  nginx.conf  rebuild.sh  server.py
certificates/: dhparam.pem
certificates/openeth.com/: cert.pem  fullchain.pem
css/: actions.css  breadcrumb.css  dex.css  fonts.css  layout.css
database/: 00_logging.sh  01_authentication.sql  02_schema.sql  03_data.sql  11_authentication.sql  12_csp_report.sql  20_schema.sql  30_data.sql
design/: open-ethgrid.ai  reaching-hand-vector-01.eps
doc/: Notes.md
js/: api.js  auth0.js  hyphen.js  lib.js  openeth.js  reorder.js  show.js  template.js
server/: .dockerignore  Actions.hs  Database.hs  Dockerfile  JsonError.hs  Main.hs  Model.hs  Notes.md  openeth.cabal
www/: about.html  authentication.js  blog.html  contact.html  demo.html  dex.css  dex.js  example1.json  example1a.json  example1b.json  examples.js  hyphenator.js  index.html  min.css  min.js  notifications.css  notifications.js  openeth.css  openeth.js  script.js  spinner.css  style.css
www/css/: button.css
www/examples/: assisted_driving.json  medical_reminding.json  medical_treatment.json  rescue.json
www/images/: particle.m4v
